# PPaste

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/release-notes/: v0.0.1.md  v0.0.2.md  v0.0.3.md  v0.1.0.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: installer-hooks.nsi
src/components/: DesktopEnvironment.tsx
src/lib/: tauri.ts
src/styles/: globals.css
