[package]
name = "ppaste"
version = "0.0.1"
description = "A minimalist, keyboard-centric clipboard manager"
authors = ["yinyin"]
edition = "2021"

[lib]
name = "ppaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"  # 跨平台剪贴板库
rusqlite = { version = "0.31", features = ["bundled"] }  # SQLite
dirs = "5"  # 获取用户目录
uuid = { version = "1", features = ["v4"] }  # 生成唯一 ID
chrono = { version = "0.4", features = ["serde"] }  # 时间处理
image = "0.25"  # 图片处理
base64 = "0.22"  # Base64 编码
rdev = "0.5.3"
